<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:id="@+id/audio1"
        android:tag="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="2sp"
        android:paddingBottom="2sp"
        android:clickable="true"
        android:onClick="play">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textSize="20sp"
            android:background="#3061380B" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/artist1"
                android:gravity="left" />>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time1"
                android:gravity="right" />>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio2"
        android:tag="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="2sp"
        android:paddingBottom="2sp"
        android:clickable="true"
        android:onClick="play">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textSize="20sp"
            android:background="#3061380B" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/artist2"
                android:gravity="left" />>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time2"
                android:gravity="right" />>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio3"
        android:tag="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="2sp"
        android:paddingBottom="2sp"
        android:clickable="true"
        android:onClick="play">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title3"
            android:textSize="20sp"
            android:background="#3061380B" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/artist3"
                android:gravity="left" />>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time3"
                android:gravity="right" />>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>